@@ -36,7 +36,7 @@ requests for the RAPTOR/TALON telescopes.
 
 =head1 REVISION
 
-$Id: raptor_gateway.pl,v 1.23 2005/12/19 12:55:54 aa Exp $
+$Id: raptor_gateway.pl,v 1.24 2005/12/19 18:04:04 aa Exp $
 
 =head1 AUTHORS
 
@@ -53,7 +53,7 @@ Copyright (C) 2005 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.23 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.24 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -333,7 +333,6 @@ if ( $config->get_state("gateway.unique_process") == 1 ) {
    #$config->set_option( "raptor.host", "144.173.229.16" );
    $config->set_option( "raptor.host", "astro.lanl.gov" );
    $config->set_option( "raptor.port", 5170 );
-   $config->set_option( "raptor.iamalive", 60 );
    
    # interprocess communication
    $config->set_option( "ua.user", "agent" );
@@ -538,166 +537,6 @@ my $soap_server = sub {
 $log->print("Spawning SOAP Server thread...");
 $listener_thread = threads->create( $soap_server );
 
-# I A M A L I V E  C A L L B A C K ------------------------------------------
-
-# the thread
-my $iamalive_thread;
-
-# anonymous subroutine
-my $iamalive = sub {
-   my $thread_name = "IAMALIVE Thread";
-
-   # create SOAP daemon
-   $log->thread2($thread_name, "Starting IAMALIVE collection...");  
-   $log->thread2($thread_name, "Pinging every " .
-                 $config->get_option( "raptor.iamalive") . " seconds..." );
-
-   # STATE FILE
-   # ----------
-   my $ping_file = 
-      File::Spec->catfile( Config::User->Home(), '.estar', 
-                           $process->get_process(), 'ping.dat' );
-   
-   $log->debug("Writing state to \$ping_file = $ping_file");
-   #my $OBS = eSTAR::Util::open_ini_file( $obs_file );
-  
-   my $PING = new Config::Simple( syntax   => 'ini', 
-                                  mode     => O_RDWR|O_CREAT );
-                                    
-   if( open ( FILE, "<$ping_file" ) ) {
-      close ( FILE );
-      $log->debug("Reading configuration from $ping_file" );
-      $PING->read( $ping_file );
-   } else {
-      $log->warn("Warning: $ping_file does not exist");
-   }  
-   
-   while( 1 ) {
-      sleep $config->get_option( "raptor.iamalive" );
-      $log->print( "Pinging RAPTOR at ". ctime() );
-      $log->thread2( $thread_name,
-          "Sending IAMALIVE (\$tid = " . threads->tid() . ")");
-
-      $log->thread2($thread_name, 
-          "Opening socket connection to RAPTOR server..." ) ;
- 
-      my $alive_sock = new IO::Socket::INET( 
-                   PeerAddr => $config->get_option( "raptor.host" ),
-                   PeerPort => $config->get_option( "raptor.port" ),
-                   Proto    => "tcp",
-                   Timeout  => $config->get_option( "connection.timeout" ) );
-
-      unless ( $alive_sock ) {
-     
-          # we have an error
-          my $error = "$!";
-          chomp($error);
-          $log->error( "Error: $error");
-          $log->error( "Error: Cannot reach RAPTOR..." );
-          next;  
-      } 
- 
-      $log->thread2($thread_name, "Sending IAMALIVE message to RAPTOR...");
-  
-      # unique ID for IAMALIVE message
-      $log->debug( "Retreving unique number from state file..." );
-      my $number = $PING->param( 'iamalive.unique_number' ); 
- 
-      if ( $number eq '' ) {
-         # $number is not defined correctly (first ever message?)
-         $PING->param( 'iamalive.unique_number', 0 );
-         $number = 0; 
-      } 
-      $log->debug("Generating unqiue ID: $number");      
-  
-      my $year = 1900 + localtime->year();
-      my $month = localtime->mon() + 1;
-      my $day = localtime->mday();
-      my $hour = localtime->hour();
-      my $min = localtime->min();
-      my $sec = localtime->sec();
-      
-      my $timestamp = $year ."-". $month ."-". $day ."T". 
-                      $hour .":". $min .":". $sec;
-      $log->debug( "Generating timestamp: $timestamp");
-      
-      # increment ID number
-      $number = $number + 1;
-      $PING->param( 'iamalive.unique_number', $number );
-      $log->debug('Incrementing unique number to ' . $number);
-     
-      my $id = $config->get_option( 'soap.host' ) . "." . 
-               $PING->param( 'iamalive.unique_number' );
-     
-      # commit ID stuff to STATE file
-      my $status = $PING->save( $ping_file );           
-      # build the IAMALIVE message
-      my $alive =
-         "<?xml version='1.0' encoding='UTF-8'?>\n" .
-         '<VOEvent role="iamalive" id="' .
-         'ivo://estar.ex/' . $id . '" version="1.1">' . "\n" .
-         ' <Who>' . "\n" .
-         '   <PublisherID>ivo://estar.ex</PublisherID>' . "\n" .
-         '   <Date>' . $timestamp . '</Date>'  . "\n" .
-         ' </Who>' . "\n" .
-         '</VOEvent>' . "\n";
-
-      # work out message length
-      my $header = pack( "N", 7 );
-      my $bytes = pack( "N", length($alive) ); 
-   
-      # send message                                   
-      $log->debug( "Sending " . length($alive) . " bytes to " . 
-                   $config->get_option( "raptor.host" ) . ":" .
-                   $config->get_option( "raptor.port" ) );
-                     
-      $log->debug( $alive ); 
-                     
-      print $alive_sock $header;
-      print $alive_sock $bytes;
-      $alive_sock->flush();
-      print $alive_sock $alive;
-      $alive_sock->flush();  
-  
-      # Wait for IAMALIVE response
-      $log->debug( "Waiting for response..." );
-      my $length;
-      my $bytes_read = sysread( $alive_sock, $length, 4 );  
-      $length = unpack( "N", $length );
- 
-      $log->debug( "Message is $length characters" );
-      my $response;               
-      $bytes_read = sysread( $alive_sock, $response, $length); 
-
-      close($alive_sock);
-      $log->debug( "Closed ALIVE socket");
-      
-      # Do I get an ACK or a IAMALIVE message?
-      # --------------------------------------
-      my $event = new Astro::VO::VOEvent( XML => $response );
-     
-      if( $event->role() eq "ack" ) {
-        $log->warn( "Warning: Recieved an ACK message in response");
-        $log->debug( "Done." );
-        
-      } elsif ( $event->role() eq "iamalive" ) {
-        $log->print( "Recieved a IAMALIVE message in response");
-        $log->debug( "Done." );
-      }  
-         
-      # finished ping, loop to while(1) { ]
-      $log->thread2( $thread_name, "Done with IAMALIVE..." );
-   }
-}; 
-
-
-# S T A R T   I A M A L I V E   T H R E A D ---------------------------------
-
-# Spawn the thread that will send IAMALIVE messages to RAPTOR
-$log->print("Spawning IAMAMLIVE thread...");
-$iamalive_thread = threads->create( $iamalive );
-$iamalive_thread->detach();
-
 # O P E N   I N C O M I N G   C L I E N T  -----------------------------------
 
 SOCKET: { 
@@ -847,6 +686,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: raptor_gateway.pl,v $
+# Revision 1.24  2005/12/19 18:04:04  aa
+# Moved all of the IAMALIVE fucntionality to raptor_alert.pl
+#
 # Revision 1.23  2005/12/19 12:55:54  aa
 # Bug fix to raptor_gateway.pl
 #
